@@ -41,12 +41,13 @@ class ExplicitSuite(qm.test.suite.Suite):
         BooleanField(name = "is_implicit",
                      title = "Implicit?",
                      description = """,
-                     True if this test is implicitly generated by QMTest."""),
+                     True if this test is implicitly generated by QMTest.""",
+                     default_value = "false"),
         ]
     
     def IsImplicit(self):
 
-        return self.is_implicit
+        return self.is_implicit == "true"
    
 
     def GetTestIds(self):
